Added Concise Toggle (#49)
* Added Concise Toggle

* Removed More Sections

* Add Concise Version Message

* Added Concise Toggle

* Removed More Sections

* Add Concise Version Message

* Remove more sections

* Fixed Commit Message Styling

--- a/content/background.html
+++ b/content/background.html
@@ -19,16 +19,18 @@
   <div id="gender"></div>
 </div>
 
-<div class="vbx2"></div>
+<div class="long_version">
+  <div class="vbx2"></div>
 
-<h3>Year of Birth</h3>
-<p class="half">
-  <span class="big">
-  76.4% of respondents were born in 1998.
-</p>
-<div class="half second">
-  <span class="graph-title">students' year of birth</span>
-  <div id="year-of-birth"></div>
+  <h3>Year of Birth</h3>
+  <p class="half">
+    <span class="big">
+    76.4% of respondents were born in 1998.
+  </p>
+  <div class="half second">
+    <span class="graph-title">students' year of birth</span>
+    <div id="year-of-birth"></div>
+  </div>
 </div>
 
 <div class="vbx2"></div>
@@ -105,6 +107,7 @@
   <div id="international"></div>
 </div>
 
+<div class="long_version">
 <h3>Immigrated to Canada</h3>
 <p class="full">
   <span class="big">
@@ -123,6 +126,7 @@
 <div class="half second">
   <span class="graph-title">students immigrated to Canada from...</span>
   <div id="emigrated"></div>
+</div>
 </div>
 
 <h3>Home Location</h3>
@@ -153,6 +157,7 @@
   <div id="mother-tongue"></div>
 </div>
 
+<div class="long_version">
 <h3>Polyglots, the Lot of Us</h3>
 <p class="full">
   <span class="big">
@@ -170,7 +175,7 @@
   <span class="graph-title">languages students can speak</span>
   <div id="known-languages"></div>
 </div>
-
+</div>
 <div class="vbx2"></div>
 
 <h2> Family background </h2>
@@ -203,8 +208,9 @@
   <div id="parent-education"></div>
 </div>
 
-<div class="vbx2"></div>
 
+<div class="vbx2"></div>
+<div class="long_version">
 <h3>Siblings</h3>
 <p class="full">
   <span class="big">
@@ -221,7 +227,7 @@
   <span class="graph-title">parental income compared to number of siblings</span>
   <div id="siblings-parents"></div>
 </div>
-
+</div>
 <div class="vbx2"></div>
 <h2> High School, Enriched Programs & CEGEP </h2>
 
@@ -253,6 +259,7 @@
 
 <div class="vbx2"></div>
 
+<div class="long_version">
 <h3>CEGEP</h3>
 <p class="half">
   <span class="big">
@@ -283,6 +290,7 @@
 </div>
 
 <div class="vbx2"></div>
+</div>
 <h2> Others </h2>
 
 <h3>Programming Knowledge</h3>
