--- a/content/coop.html
+++ b/content/coop.html
@@ -82,6 +82,7 @@
 
 <div class="vbx2"></div>
 
+<div class="long_version">
 <h3> Favourite Locations </h3>
 <p class="half">
   <span class="big">
@@ -101,6 +102,7 @@
 </div>
 
 <div class="vbx2"></div>
+</div>
 
 <h3> Salary </h3>
 <p class="half">
@@ -189,6 +191,7 @@
 </div>
 
 <div class="vbx2"></div>
+<div class="long_version">
 <h3> Interviews </h3>
 <p class="full">
   Over the coop interview cycles, students sometimes missed an interview or were late to an interview. 
@@ -245,6 +248,7 @@
   Following that, factors such as salary, work benefits, culture, and co-worokers were roughly equally important factors.
 </p>
 <div class="vbx2"></div>
+</div>
 <div class="half second">
   <span class="graph-title">favourite co-op company</span>
   <div id="favourite-coop"></div>
@@ -355,6 +359,7 @@ imply higher job satisfaction.
 </div>
 
 <div class="vbx2"></div>
+<div class="long_version">
 <h3> Hackathons </h3>
 <p class="half">
   <span class="big">
@@ -376,6 +381,8 @@ imply higher job satisfaction.
 </div>
 
 <div class="vbx2"></div>
+</div>
+<div class="long_version">
 <h3> Side projects </h3>
 <p class="half">
   <span class="big">
@@ -402,6 +409,7 @@ imply higher job satisfaction.
 </div>
 
 <div class="vbx2"></div>
+</div>
 <h3> Admission average </h3>
 <p class="half">
   <span class="big">
