--- a/content/finances.html
+++ b/content/finances.html
@@ -51,6 +51,7 @@
 
 <div class="vbx2"></div>
 
+<div class="long_version">
 <h3> Expenses on School Material </h3>
 <p class="half">
   <span class="big">
@@ -67,6 +68,7 @@
 </div>
 
 <div class="vbx2"></div>
+</div>
 
 <h3> Loans </h3>
 <p class="half">
