--- a/content/future.html
+++ b/content/future.html
@@ -53,7 +53,7 @@
 </div>
 
 <div class="vbx3"></div>
-
+<div class="long_version">
 <p class="half">
   <span class="big">
     Students do not feel the need to become accredited as Professional Engineers.
@@ -69,7 +69,7 @@
 </div>
 
 <div class="vbx3"></div>
-
+</div>
 <p class="half">
   <span class="big">
     Students believe in the value of their FYDP projects. 
@@ -188,7 +188,7 @@
 </div>
 
 <div class="vbx2"></div>
-
+<div class="long_version">
 <h3> Moving home </h3>
 <p class="half">
   <span class="big">
@@ -206,7 +206,7 @@
 </div>
 
 <div class="vbx2"></div>
-
+</div>
 <h3> Closing Remarks </h3>
 <p class="full">
   The following is a summary of the advice shared by students with the
