--- a/content/health.html
+++ b/content/health.html
@@ -12,6 +12,7 @@
   <div id="sickness"></div>
 </div>
 
+<div class="long_version">
 <p class="half">
     <span class="big">
       Accidents happen and it's important to be covered.
@@ -24,7 +25,7 @@
     <span class="graph-title">how much of your expenses did health insurance (OHIP, UHIP, FEDS plan) cover?</span>
     <div id="health-insurance"></div>
   </div>
-
+</div>
 <div class="vbx4"></div>
 
 <h3> Mental Health </h3>
@@ -112,6 +113,7 @@
     <div id="exercise-type"></div>
 </div>
 
+<div class="long_version">
 <p class="half">
     <span class="big">
         47% of respondents have participated in intramurals.
@@ -137,7 +139,7 @@
     <span class="graph-title">change in weight over undergrad (lbs)</span>
     <div id="weight"></div>
 </div>
-
+</div>
 <div class="vbx4"></div>
 
 <h3> Controlled Substances </h3>
