--- a/content/introduction.html
+++ b/content/introduction.html
@@ -152,3 +152,15 @@ future classes, as we did, in order to take future profiles to new heights.
     </li>
   </ul>
 </div>
+<div class="vbx2"></div>
+<div>
+  <h3 id="concise">Concise Version</h3>
+  <label class="switch">
+    <input id="concise-toggle" type="checkbox">
+    <span class="slider round"></span>
+  </label>
+  <p style="margin-top:5px;">
+    This class profile can be a bit long showing various unique insights into our class. The concise 
+    version offers a more summarised version with a few graphs ommitted.
+  </p>
+</div>
