--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -33,6 +33,7 @@
   <div id="editor"></div>
 </div>
 
+<div class="long_version">
 <p class="half">
   <span class="big">
     iOS was the favourite mobile OS, used among 63% of students.
@@ -45,9 +46,10 @@
   <span class="graph-title">favorite mobile OS</span>
   <div id="mobile-os"></div>
 </div>
+</div>
 
-
-<h3> Food Preparation </h3>
+<div class="long_version">
+  <h3> Food Preparation </h3>
 <p class="half">
   <span class="big">
     Walmart won the hearts (and stomachs) of most SE students, followed by a
@@ -60,7 +62,8 @@
   <span class="graph-title">frequented grocery stores</span>
   <div id="grocery-stores"></div>
 </div>
-
+</div>
+<div class="long_version">
 <p class="half">
   <span class="big">
   A minor in culinary studies.
@@ -74,7 +77,8 @@
 </div>
 
 <div class="vbx4"></div>
-
+</div>
+<div class="long_version">
 <h3> Dining </h3>
 <p class="half">
   <span class="big">
@@ -101,7 +105,7 @@
 </div>
 
 <div class="vbx4"></div>
-
+</div>
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
@@ -121,6 +125,7 @@
 
 <div class="vbx2"></div>
 
+<div class="long_version">
 <p class="half">
   <span class="big">
   S.R.E.A.M - Sleep Rules Everything Around Me.
@@ -135,6 +140,7 @@
 </div>
 
 <div class="vbx4"></div>
+</div>
 
 <h3> Travel Locations </h3>
 <p class="half">
@@ -204,7 +210,7 @@
 </div>
 
 <div class="vbx3"></div>
-
+<div class="long_version">
 <p class="half">
   <span class="big">
     Engineering design teams were not pursued.
@@ -221,7 +227,7 @@
 </div>
 
 <div class="vbx3"></div>
-
+</div>
 <p class="half">
   <span class="big">
     SE respondents who exercise enjoy sports and weight training the most.
