--- a/content/misc.html
+++ b/content/misc.html
@@ -1,4 +1,5 @@
 <h1 id="misc"> Miscellaneous </h1>
+<div class="long_version">
 <h3> Burnout </h3>
 <p class="half">
   <span class="big">
@@ -16,7 +17,8 @@
 </div>
 
 <div class="vbx2"></div>
-
+</div>
+<div class="long_version">
 <h3> Physical Conflict </h3>
 <p class="half">
   <span class="big">
@@ -33,7 +35,8 @@
 </div>
 
 <div class="vbx2"></div>
-
+</div>
+<div class="long_version">
 <h3> Reddit Usage </h3>
 <p class="half">
   <span class="big">
@@ -49,7 +52,8 @@
 </div>
 
 <div class="vbx2"></div>
-
+</div>
+<div class="long_version">
 <h3>Cat or Dog</h3>
 <p class="half">
   <span class="big">
@@ -61,7 +65,7 @@
 </div>
 
 <div class="vbx2"></div>
-
+</div>
 <!-- TODO: Move this to a new section? -->
 <h3> Beauty in the details </h3>
 <p class="full">
@@ -169,6 +173,7 @@ some stories over the past 5 years.
 </div>
 <div class="vb"></div>
 
+<div class="long_version">
 <h3> Crying Frequency </h3>
 <p class="half">
   <span class="big">
@@ -190,7 +195,7 @@ some stories over the past 5 years.
 </div>
 
 <div class="vbx2"></div>
-
+</div>
 <h3> Contemplating Enrollment </h3>
 <p class="half">
   <span class="big">
@@ -207,6 +212,7 @@ some stories over the past 5 years.
   <div id="transfer-thoughts"></div>
 </div>
 
+<div class="long_version">
 <p class="half">
   <span class="big">
     Most SE students had no doubts about completing their bachelors.
@@ -217,7 +223,6 @@ some stories over the past 5 years.
   <span class="graph-title">have you considered leaving university?</span>
   <div id="dropout-thoughts"></div>
 </div>
-
 <p class="half">
   <span class="big">
     Results from the previous two graphs came from mostly SE grads.
@@ -228,6 +233,7 @@ some stories over the past 5 years.
 <div class="half second">
   <span class="graph-title">are you an SE 2021 grad?</span>
   <div id="se21-grad"></div>
+</div>
 </div>
 
 <div class="vbx2"></div>
