--- a/content/outcomes.html
+++ b/content/outcomes.html
@@ -15,8 +15,8 @@
   <div id="choose-program"></div>
 </div>
 
+<div class="long_version">
 <div class="vb"></div>
-
 <h3> the experience per gender </h3>
 <p class="half">
   <span class="big">
@@ -30,4 +30,5 @@
 <div class="half second">
   <span class="graph-title">program rating per gender</span>
   <div id="gender-rating"></div>
+</div>
 </div>
