--- a/content/relationships.html
+++ b/content/relationships.html
@@ -44,6 +44,7 @@
 <div class="vb"></div>
 
 <h2>Friendships</h2>
+<div class="long_version">
 <p class="full">
   On average, a softie made 4.36 new friends over co-op, and 3.05 over a school term.
   They would lose on average 1.30 friends over co-op, compared to 0.55 over a school
@@ -64,7 +65,7 @@
     <div class="friends-gain-item c4 pressed">Lost (study)</div>
   </div>
 </div>
-
+</div>
 <p class="full">
   <span class="big">
     From classmates to friends..?
@@ -158,6 +159,7 @@
   during their undergraduate studies.
 </p>
 
+<div class="long_version">
 <p class="full">
   <span class="big">
     Spilling the infideli-tea.
@@ -179,7 +181,7 @@
   </span>
   <div id="romance-cheating-reasons"></div>
 </div>
-
+</div>
 <h3> Growth </h3>
 <p class="full">
   <span class="big">
