--- a/content/transfers.html
+++ b/content/transfers.html
@@ -12,7 +12,7 @@ Of the people surveyed, approximately 9.5% of students switched out of the Softw
 </div>
 
 <div class="vbx2"></div>
-
+<div class="long_version">
 <h3> The Switch Years </h3>
 <p class="half">
 <span class="big">
@@ -27,7 +27,7 @@ an Excellent academic standing.
     <div id="term-transferred"></div>
 </div>
 <div class="vbx2"></div>
-
+</div>
 <h3> Reason for Switching </h3>
 <p class="half">
 <span class="big">
@@ -57,7 +57,7 @@ in order to have a more flexible schedule for future terms and to take courses b
     <div id="disliked-courses-transferred"></div>
 </div>
 <div class="vbx2"></div>
-
+<div class="long_version">
 <h3>I Regret Nothing</h3>
 <p class="half">
 <span class="big">
@@ -68,4 +68,5 @@ The Computer Science program was successfully able to provide the transferred st
 <div class="half second">
     <span class="graph-title">did you regret transferring out of SE?</span>
     <div id="regret-transferred"></div>
+</div>
 </div>
