--- a/content/academics.html
+++ b/content/academics.html
@@ -76,6 +76,7 @@
 
 <div class="vbx2"></div>
 
+<div class="long_version">
 <h3>Options</h3>
 <p class="half">
   <span class="big">
@@ -94,7 +95,9 @@
 </div>
 
 <div class="vbx2"></div>
+</div>
 
+<div class="long_version">
 <h3>Transferred From</h3>
 <p class="half">
   <span class="big">
@@ -111,6 +114,7 @@
 </div>
 
 <div class="vbx2"></div>
+</div>
 
 <h3>Favourite Professors</h3>
 <p class="half">
@@ -205,6 +209,7 @@
 
 <div class="vbx2"></div>
 
+<div class="long_version">
 <h2> Overloading </h2>
 <h3>Overloading & Academic Terms</h3>
 <p class="half">
@@ -235,7 +240,8 @@
 </div>
 
 <div class="vbx2"></div>
-
+</div>
+<div class="long_version">
 <h2> Location </h2>
 <h3>Pre-Covid</h3>
 <p class="half">
@@ -283,7 +289,7 @@
   <b> Interactive: </b> Click on a term number to view the plot for that term.
   </p>
 </div>
-
+</div>
 <h2> Does X affect grades?</h2>
 
 <h3> Attendance </h3>
@@ -313,6 +319,7 @@
   <div id="parent-grades"></div>
 </div>
 
+<div class="long_version">
 <h3> Enriched Programs </h3>
 <p class="half">
   <span class="big">
@@ -332,6 +339,7 @@
     <div class="enriched-grades-item c1 pressed">Overall</div>
     <div class="enriched-grades-item c2">First Year</div>
   </div>
+</div>
 </div>
 
 <h3> Entrance Average </h3>
@@ -353,7 +361,7 @@
     <div class="entrance-grades-item c2">First Year</div>
   </div>
 </div>
-
+<div class="long_version">
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
@@ -367,5 +375,5 @@
   <span class="graph-title">grades compared to hours of sleep</span>
   <div id="sleep-grades"></div>
 </div>
-
+</div>
 <div class="vbx4"></div>
