Create Line Chart for Official Grades (#52)
* Create Line Chart for Official Grades

--- a/content/academics.html
+++ b/content/academics.html
@@ -13,35 +13,15 @@
   it may as well be the result of the transition to an online delivery for courses or because only 19
   respondents disclosed their 4B term average.
   <br /><br />
-  Note that this data may not be necessarily representative of the class. You can find the official median
-  for each term here:
-  <table>
-    <caption><b>Official Median</b></caption>
-    <tr>
-      <td>1A</td>
-      <td>1B</td>
-      <td>2A</td>
-      <td>2B</td>
-      <td>3A</td>
-      <td>3B</td>
-      <td>4A</td>
-      <td>4B</td>
-    </tr>
-    <tr>
-      <td>86.4</td>
-      <td>81.3</td>
-      <td>84.8</td>
-      <td>82.2</td>
-      <td>87.8</td>
-      <td>83.1</td>
-      <td>89.6</td>
-      <td>90.6</td>
-    </tr>
-  </table>
+  Note that this data may not be necessarily representative of the class. The official median
+  for each term is as follows:
 </p>
 <div class="half second">
-  <span class="graph-title">grade distributions from 1A to 4A </span>
+  <span class="graph-title">grade distributions from 1A to 4A</span>
   <div id="grades"></div>
+  <div class="vbx2"></div>
+  <span class="graph-title">official grade median from 1A to 4A</span>
+  <div id="grades-official"></div>
 </div>
 
 <div class="vbx2"></div>
