Add a Reddit Timeline and Interactive Chart Message (#46)
* Added a timeline section

* Add interactive message under interactive graphs

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

--- a/content/academics.html
+++ b/content/academics.html
@@ -245,6 +245,9 @@
     <div class="loc-pre-item c5">3A</div>
     <div class="loc-pre-item c6">3B</div>
   </div>
+  <p class="full center">
+    <b> Interactive: </b> Click on a term number to view students' location for that term.
+  </p>
 </div>
 
 <h3>Post-Covid</h3>
@@ -266,7 +269,7 @@
     <div class="loc-post-item c2">4B</div>
   </div>
   <p class="full center">
-  <b> Interactive: </b> Click on a term number to view the plot for that term.
+  <b> Interactive: </b> Click on a term number to view students' location for that term.
   </p>
 </div>
 </div>
@@ -319,6 +322,9 @@
     <div class="enriched-grades-item c1 pressed">Overall</div>
     <div class="enriched-grades-item c2">First Year</div>
   </div>
+  <p class="full center">
+    <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
+  </p>
 </div>
 </div>
 
@@ -340,6 +346,9 @@
     <div class="entrance-grades-item c1 pressed">Overall</div>
     <div class="entrance-grades-item c2">First Year</div>
   </div>
+  <p class="full center">
+    <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
+  </p>
 </div>
 <div class="long_version">
 <h3> Sleep </h3>
