--- a/content/coop.html
+++ b/content/coop.html
@@ -78,6 +78,9 @@
     <div class="work-location-item wl10 pressed">West Coast Canada</div>
     <div class="work-location-item wl11 pressed">Outside North America</div>
   </div>
+  <p class="full center">
+    <b> Interactive: </b> Click on a location to hide or display the plot for that location.
+  </p>
 </div>
 
 <div class="vbx2"></div>
@@ -427,4 +430,7 @@ imply higher job satisfaction.
     <div class="admission-salary-item c1 pressed">Overall</div>
     <div class="admission-salary-item c2">First Year</div>
   </div>
+  <p class="full center">
+    <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
+  </p>
 </div>
