--- a/content/introduction.html
+++ b/content/introduction.html
@@ -69,6 +69,125 @@ It is our hope that the groundwork set by Andy & others will be iterated on by
 future classes, as we did, in order to take future profiles to new heights.
 </p>
 
+<div class="vbx6"></div>
+
+<h1> Timeline </h1>
+<p class="full">
+  During our time at Waterloo, the Software Class of 2021 (a.k.a SEXXI) experienced many firsts and witnessed various
+  noteworthy events, which we list for you below.
+</p>
+<!-- Timeline from https://www.sliderrevolution.com/resources/css-timeline/ -->
+<div id="timeline">
+  <div>
+  <section class="year">
+    <h3>Spring 2016</h3>
+    <section>
+      <ul>
+        <li>Harambe dies</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Fall 2016</h3>
+    <section>
+      <ul>
+        <li>SEXXI start at the University of Waterloo</li>
+        <li>First shortened Orientation Week</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Winter 2017</h3>
+    <section>
+      <ul>
+        <li>r/uwaterloo wins the meme war against r/UofT thanks to a <a href="https://www.reddit.com/r/uwaterloo/comments/5ibr95/fuck_it_if_this_post_receives_2000_upvotes_i_will/">goose tattoo</a></li>
+        <li>JobMine is replaced by WaterlooWorks; SEXXI students are among the first students to use (i.e.: beta test) WaterlooWorks</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Fall 2017</h3>
+    <section>
+      <ul>
+        <li>New Residence Building (NRB) opens on campus</li>
+        <li>NRB is renamed Claudette Millar Hall (CMH) 2 months later</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Summer 2017</h3>
+    <section>
+      <ul>
+        <li>SLC PAC Extension starts</li>
+      </ul>
+    </section>
+  </section>
+   <section class="year">
+    <h3>Summer 2018</h3>
+    <section>
+      <ul>
+        <li><a href="https://sesoc.uwaterloo.ca/">Software Engineering Society (SESoc)</a> is founded</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Fall 2018</h3>
+    <section>
+      <ul>
+        <li>Lime Scooter Pilot</li>
+        <li>Engineering 7's construction is complete, and the building is officially open to students</li>
+        <li>Donna Strickland receives Nobel Prize in Physics</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Winter 2019</h3>
+    <section>
+      <ul>
+        <li>The Bombshelter Pub (a.k.a "The Bomber"), UWaterloo's on-campus pub, closes</li>
+        <li>First UWaterloo Snow Day</li>
+        <li>Feds (Federation of Students) starts rebranding movement, eventually settles on WUSA (Waterloo Undergraduate Student Association)</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Summer 2019</h3>
+    <section>
+      <ul>
+        <li>ION, Waterloo's light rail transit system, opens</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Fall 2019</h3>
+    <section>
+      <ul>
+        <li>Initial predicted completion date of SLC PAC Extension</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Winter 2020</h3>
+    <section>
+      <ul>
+        <li>Global Pandemic (Covid-19)</li>
+        <li>The Academic Mission becomes essential</li>
+      </ul>
+    </section>
+  </section>
+  <section class="year">
+    <h3>Spring 2021</h3>
+    <section>
+      <ul>
+        <li>First online Iron Ring Ceremony (IRC)</li>
+        <li>SEXXI graduates</li>
+      </ul>
+    </section>
+  </section>
+</div>
+</div>
+
+
 <div class="vbx4"></div>
 
 <h1 id="toc">Sections</h1>
