--- a/content/relationships.html
+++ b/content/relationships.html
@@ -64,6 +64,9 @@
     <div class="friends-gain-item c3 pressed">Gained (study)</div>
     <div class="friends-gain-item c4 pressed">Lost (study)</div>
   </div>
+  <p class="full center">
+    <b> Interactive: </b> Click on a provided filter to hide or display the plot for that filter.
+  </p>
 </div>
 </div>
 <p class="full">
