Reduce Unnecessary Text Wrapping for Academic Graph Toggles (#53)

--- a/content/academics.html
+++ b/content/academics.html
@@ -320,7 +320,7 @@
   <div class="scale">
     <span class="legend">Cumulative Average:</span>
     <div class="enriched-grades-item c1 pressed">Overall</div>
-    <div class="enriched-grades-item c2">First Year</div>
+    <div class="enriched-grades-item c2">First-Year</div>
   </div>
   <p class="full center">
     <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
@@ -344,7 +344,7 @@
   <div class="scale">
     <span class="legend">Cumulative Average:</span>
     <div class="entrance-grades-item c1 pressed">Overall</div>
-    <div class="entrance-grades-item c2">First Year</div>
+    <div class="entrance-grades-item c2">First-Year</div>
   </div>
   <p class="full center">
     <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
