--- a/content/coop.html
+++ b/content/coop.html
@@ -428,7 +428,7 @@ imply higher job satisfaction.
   <div class="scale">
     <span class="legend">Cumulative Average:</span>
     <div class="admission-salary-item c1 pressed">Overall</div>
-    <div class="admission-salary-item c2">First Year</div>
+    <div class="admission-salary-item c2">First-Year</div>
   </div>
   <p class="full center">
     <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
