Address Typos, Fix Overlapping Ticker Text in Charts, Cleanup (#57)
* First set

* fixes 2

* reword

--- a/content/academics.html
+++ b/content/academics.html
@@ -81,8 +81,8 @@
 <h3>Transferred From</h3>
 <p class="half">
   <span class="big">
-  Some students joined the class later into their degree. Among transferred students, all respondents who transferred in the
-  class came from Engineering.
+  Some students joined the class later into their degree. All respondents who transferred into the
+  class came from within Engineering.
   </span>
   Computer Science students do not appear to be interested in transferring into the class. Some possible explanations is
   the freedom provided by the CS program and the possibility of taking a Digital Hardware or a Software Engineering specialization.
@@ -197,7 +197,7 @@
   Overloading is popular among the class with 28 respondents (53%) overloading
   at some point during their academic degree.
   </span>
-  The 4A and 3A terms are the most popular term to overload. The SE curriculum encourages
+  The 3A and 4A terms are the most popular ones to overload. The SE curriculum encourages
   students to overload in their 4A term to have a lighter term in 4B, which can be busy
   with graduation traditions and FYDP work on top of courses.
 </p>
@@ -354,7 +354,7 @@
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
-  On average, respondents performed slighlty worse if they slept more than 8 hours.
+  On average, respondents performed slightly worse if they slept more than 8 hours.
   </span>
   Note that all respondents slept at least 5 hours. Although there seems to be some correlation between sleep
   and grades, this does not necessarily mean that one causes the other. Also note that the recommended number of hours of
