--- a/content/coop.html
+++ b/content/coop.html
@@ -50,7 +50,7 @@
   Although the University of Waterloo did not authorize any co-ops outside of Canada once the pandemic hit, 35.4% of respondents
   said they worked in the US for their last co-op. One explanation is that in order
   to graduate from Software Engineering only 5 (now 4 as a result of the pandemic) out of 6 approved co-ops need to be completed, so students
-  may not have cared about the restrictions. Another reason is respondents may have decided to provide the location of the office they would have
+  may have dismissed the restrictions. Another reason is respondents may have decided to provide the location of the office they would have
   worked for if it wasn't for the pandemic.
 </p>
 <div class="vbx2"></div>
