--- a/content/end.html
+++ b/content/end.html
@@ -15,14 +15,14 @@ This project wouldn't have been possible without the help of some great people:
 <p class="full">
 <b>Andy Zhang</b> for allowing us to fork the 2018 profile site, saving us time
 and letting us focus on making this profile more personal than ever before.
-Also for reviewing our initial drafts and for being available to discuss the
+Also for reviewing our pre-release draft and being available to discuss the
 profile over messenger.
 </p>
 
 <div class="hvb"></div>
 <p class="full">
-<b>Patrick Lam, Derek Rayside</b>, and all other SEs for providing feedback on the
-initial drafts of the class profile.
+<b>Patrick Lam, Derek Rayside</b>, and all other SEs for providing input
+throughout the process of making this profile!
 </p>
 
 <div class="hvb"></div>
