--- a/content/future.html
+++ b/content/future.html
@@ -123,10 +123,10 @@
 <div class="vbx2"></div>
 <p class="half">
   <span class="big">
-    The hourly wage / salary will have a median and an average of $81 and
-    $105 CAD respectively.
+    The hourly wage / salary will have an average and a median of $105 and
+    $81 CAD respectively.
   </span>
-  We can again estimate this to be $76 and $99 CAD with today's exchange rate.
+  We can again estimate this to be $99 and $76 CAD with today's exchange rate.
 </p>
 <div class="half second">
   <span class="graph-title">new grad hourly wage</span>
@@ -137,14 +137,14 @@
 <p class="half">
   <span class="big">
     There's a huge discrepency in profit sharing for new grads,
-    with the median and average being $32,500 and $95,392 CAD.
+    with the average and median being $95,392 and $32,500 CAD.
   </span>
   "Profit sharing" here is used to encompass stock options, RSUs,
   and other forms of equity-based compensation.
   <br /><br />
   There are extreme outliers that skewed the mean and median greatly.
   <br /><br />
-  With the new rate, the results are $30,505 and $89,742 CAD.
+  With the new rate, the results are $89,742 and $30,505 CAD.
 </p>
 <div class="half second">
   <span class="graph-title">new grad profit sharing in compensation</span>
@@ -154,13 +154,14 @@
 <div class="vbx2"></div>
 <p class="half">
   <span class="big">
-    Sign-on bonuses were common for respondents, with the median and
-    average being $40,000 and $62,979 CAD.
+    Sign-on bonuses were common for respondents, with the average and
+    median being $62,979 and $40,000 CAD.
   </span>
   The mode response was $0 for a signing bonus with 15 responses out of
   the total 47.
   <br /><br />
-  Adjusting for the new exchange rate, we find the median and average to be $37,630 and $59,248 CAD.
+  Adjusting for the new exchange rate, we find the average and median to be 
+  $59,248 and $37,630 CAD.
 </p>
 <div class="half second">
   <span class="graph-title">new grad sign-on compensation</span>
