--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -10,7 +10,7 @@
   <br/> <br/>
   C++ is one of the first languages that SE students encounter in their courses.
   It provides a strong programming foundation and is highly portable, making it an ideal choice for multi-platform development.
-  It also has applications in Enterprise codebases, so students may encounter it over Co-op as well.
+  It also has applications in Enterprise codebases, so students may encounter it over co-op as well.
   <br/> <br/>
   Many students encounter web development either during co-op or for side projects.
   This may explain why many students pick up JavaScript and TypeScript.
@@ -38,7 +38,7 @@
   <span class="big">
     iOS was the favourite mobile OS, used among 63% of students.
   </span>
-  Interestingly, Android dominates the <a rel="noopener" href="https://gs.statcounter.com/os-market-share/mobile/worldwide" target="_blank" >Worldwide market share</a>, running on around 72% of devices compared to 26% for iOS.
+  Interestingly, Android dominates the <a rel="noopener" href="https://gs.statcounter.com/os-market-share/mobile/worldwide" target="_blank" >worldwide market share</a>, running on around 72% of devices compared to 26% for iOS.
   <br/> <br/>
   However, in North America, we see 53% of devices running iOS and 45% using Android, which is a similar proportion to what is seen among SE students.
 </p>
