--- a/content/misc.html
+++ b/content/misc.html
@@ -26,7 +26,7 @@
     during their degree.
   </span>
   This question was asked to get some signal on conflicts that SE students may have
-  been involed in. All 49 respondents said they had never fought outside a sport
+  been involved in. All 49 respondents said they had never fought outside a sport
   setting.
 </p>
 <div class="half second">
