--- a/content/relationships.html
+++ b/content/relationships.html
@@ -32,7 +32,7 @@
 <div class="full">
   <div id="fam-distance"></div>
   <span class="graph-title">
-    distance (kilometres) from familial home
+    distance (thousands of kilometres) from familial home
   </span>
 </div>
 <p class="full">
