list countries for exchange (#56)
for visibility, because singapore is too small
on the map

--- a/content/exchange.html
+++ b/content/exchange.html
@@ -49,7 +49,7 @@
     2A term. A good amount went on exchange in their 3B term. All but one respondent
     recommended that future SEs attempt going on exchange. All respondents went abroad
     for only a single term. The sister universities SEs attended were all in Europe
-    or Asia.
+    (UK, Netherlands, Switzerland) or Asia (Singapore, South Korea).
 </p>
 <div class="vb"></div>
 <div class="full">
