Update initial predicted completion date for SLC PAC Expansion (#58)

--- a/content/introduction.html
+++ b/content/introduction.html
@@ -137,6 +137,7 @@ future classes, as we did, in order to take future profiles to new heights.
         <li>Lime Scooter Pilot</li>
         <li>Engineering 7's construction is complete, and the building is officially open to students</li>
         <li>Donna Strickland receives Nobel Prize in Physics</li>
+        <li>Initial predicted completion date of SLC PAC Expansion</li>
       </ul>
     </section>
   </section>
@@ -155,14 +156,6 @@ future classes, as we did, in order to take future profiles to new heights.
     <section>
       <ul>
         <li>ION, Waterloo's light rail transit system, opens</li>
-      </ul>
-    </section>
-  </section>
-  <section class="year">
-    <h3>Fall 2019</h3>
-    <section>
-      <ul>
-        <li>Initial predicted completion date of SLC PAC Extension</li>
       </ul>
     </section>
   </section>
