--- a/content/misc.html
+++ b/content/misc.html
@@ -128,9 +128,9 @@ some stories over the past 5 years.
 
   <div class="vb"></div>
   <div class="path-item">
-    <span class="big path-title">Turns on a Tuesday</span>
+    <span class="big path-title">Turnt on a Tuesday</span>
     <p>
-      "I got drunk at a work party on time in San Francisco on a work term. I don't
+      "I got drunk at a work party on[e] time in San Francisco on a work term. I don't
       remember anything that happened that night but I woke up in a hospital with
       vomit on my jeans, and was told I was found on the side of some street.
       <br /><br />
