--- a/content/introduction.html
+++ b/content/introduction.html
@@ -146,7 +146,7 @@ future classes, as we did, in order to take future profiles to new heights.
     <section>
       <ul>
         <li>The Bombshelter Pub (a.k.a "The Bomber"), UWaterloo's on-campus pub, closes</li>
-        <li>First UWaterloo Snow Day</li>
+        <li>First UWaterloo Snow Day since 2013</li>
         <li>Feds (Federation of Students) starts rebranding movement, eventually settles on WUSA (Waterloo Undergraduate Student Association)</li>
       </ul>
     </section>
