expand text below graphs; uniformise break sizes

--- a/content/future.html
+++ b/content/future.html
@@ -20,7 +20,7 @@
   <div id="post-location"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 
 <p class="half">
   <span class="big">
@@ -36,7 +36,7 @@
   <div id="ft-company"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 
 <p class="half">
   <span class="big">
@@ -52,7 +52,7 @@
   <div id="coop-conversion"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 <div class="long_version">
 <p class="half">
   <span class="big">
@@ -68,7 +68,7 @@
   <div id="peng"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 </div>
 <p class="half">
   <span class="big">
@@ -84,7 +84,7 @@
   <div id="cont-fydp"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 
 <p class="half">
   <span class="big">
@@ -107,18 +107,21 @@
     will average $284,728 CAD, with a median of $260,000. This number
     includes all forms of remuneration eg. signing bonuses and equity.
   </span>
-  The exchange rate used for this question and the ones that follow was 1.3
-  CAD per 1 USD. That rate was accurate at the time the survey was shared,
-  but the rate is 1.2 as of writing.
-  <br /><br />
-  Since 77% of respondents will be relocating to the US, we can estimate
-  the new average and median earnings to actually be $267,882 and $244,600 CAD.
-  <!-- 260k*(1 + 0.77(1.2/1.3 - 1)). -->
 </p>
 <div class="half second">
   <span class="graph-title">new grad total first year compensation</span>
   <div id="ft-total"></div>
 </div>
+<p class="half">
+  The exchange rate used for this question and the ones that follow was 1.3
+  CAD per 1 USD. That rate was accurate at the time the survey was shared,
+  but the rate is 1.2 as of writing.
+</p>
+<p class="half second">
+  Since 77% of respondents will be relocating to the US, we can estimate
+  the new average and median earnings to actually be $267,882 and $244,600 CAD.
+  <!-- 260k*(1 + 0.77(1.2/1.3 - 1)). -->
+</p>
 
 <div class="vbx2"></div>
 <p class="half">
@@ -141,15 +144,16 @@
   </span>
   "Profit sharing" here is used to encompass stock options, RSUs,
   and other forms of equity-based compensation.
-  <br /><br />
-  There are extreme outliers that skewed the mean and median greatly.
-  <br /><br />
-  With the new rate, the results are $89,742 and $30,505 CAD.
 </p>
 <div class="half second">
   <span class="graph-title">new grad profit sharing in compensation</span>
   <div id="ft-stock"></div>
 </div>
+<p class="full">
+  There are extreme outliers that skewed the mean and median greatly.
+  <br />
+  With the new rate, the results are $89,742 and $30,505 CAD.
+</p>
 
 <div class="vbx2"></div>
 <p class="half">
@@ -178,15 +182,16 @@
     accepting full-time roles. 
   </span>
   It is great to see the class value a positive environment above compensation.
-  <br /><br />
-  In contrast to most other industries, software recruitment has remained
-  relatively unaffected in the face of a global pandemic. Only 1 respondent factored
-  job security in their decision-making. 
 </p>
 <div class="half second">
   <span class="graph-title">factors affecting post-graduation plans</span>
   <div id="motivation"></div>
 </div>
+<p class="full">
+  In contrast to most other industries, software recruitment has remained
+  relatively unaffected in the face of a global pandemic. Only 1 respondent factored
+  job security in their decision-making.
+</p>
 
 <div class="vbx2"></div>
 <div class="long_version">
@@ -197,14 +202,15 @@
   </span>
   Moving away is a big change. There's a fairly even split among students who would like to return home or stay abroad, while the rest of students haven't decided yet.
   This goes to show that everyone has different goals and each student should find what's important to them.
-  <br/><br/>
-  One common tip from alumni is to pursue what makes you happy and aligns with your values.
-  This way, you can find the most happiness in what you do, whether that's close to home or abroad.
 </p>
 <div class="half second">
   <span class="graph-title">do you plan to return to your home country?</span>
   <div id="post-return-home"></div>
 </div>
+<p class="full">
+  One common tip from alumni is to pursue what makes you happy and aligns with your values.
+  This way, you can find the most happiness in what you do, whether that's close to home or abroad.
+</p>
 
 <div class="vbx2"></div>
 </div>
