--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -11,14 +11,16 @@
   C++ is one of the first languages that SE students encounter in their courses.
   It provides a strong programming foundation and is highly portable, making it an ideal choice for multi-platform development.
   It also has applications in Enterprise codebases, so students may encounter it over co-op as well.
-  <br/> <br/>
-  Many students encounter web development either during co-op or for side projects.
-  This may explain why many students pick up JavaScript and TypeScript.
 </p>
 <div class="half second">
   <span class="graph-title">favourite programming language</span>
   <div id="programming-language"></div>
 </div>
+<p class="full">
+  Many students encounter web development either during co-op or for side projects.
+  This may explain why many students pick up JavaScript and TypeScript.
+</p>
+<div class="vb"></div>
 
 <p class="half">
   <span class="big">
@@ -76,7 +78,7 @@
   <div id="cooking-frequency"></div>
 </div>
 
-<div class="vbx4"></div>
+<div class="vbx2"></div>
 </div>
 <div class="long_version">
 <h3> Dining </h3>
@@ -104,7 +106,7 @@
   <div id="eating-out-frequency"></div>
 </div>
 
-<div class="vbx4"></div>
+<div class="vbx2"></div>
 </div>
 <h3> Sleep </h3>
 <p class="half">
@@ -123,7 +125,7 @@
   <div id="sleep-time"></div>
 </div>
 
-<div class="vbx2"></div>
+<div class="vb"></div>
 
 <div class="long_version">
 <p class="half">
@@ -139,7 +141,7 @@
   <div id="sleep-duration"></div>
 </div>
 
-<div class="vbx4"></div>
+<div class="vbx2"></div>
 </div>
 
 <h3> Travel Locations </h3>
@@ -192,7 +194,7 @@
   </p>
 </p>
 
-<div class="vbx4"></div>
+<div class="vbx2"></div>
 
 <h3> Extracurriculars </h3>
 <p class="half">
@@ -209,7 +211,7 @@
   <div id="extracurriculars"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 <div class="long_version">
 <p class="half">
   <span class="big">
@@ -226,7 +228,7 @@
   <div id="design-team"></div>
 </div>
 
-<div class="vbx3"></div>
+<div class="vbx2"></div>
 </div>
 <p class="half">
   <span class="big">
