--- a/content/finances.html
+++ b/content/finances.html
@@ -93,26 +93,26 @@
   The co-op program can help students earn money to pay off debts and expenses as they work towards their degree.
   <br /> <br />
   In 2019, the average student debt in Ontario was around $19,000 compared to $20k - $30k average debt among this survey respondents.
-  <br /> <br /> <!-- Newline -->
-  Engineering at Waterloo is also a more costly program. 
-  <br/>
-  The average undergraduate tuition for Canadian citizens studying in Canada is around $6,500/year compared to $17,100/year for SE.
-  The average undergraduate tuition for international students studying in Canada is around $29,700/year compared to $61,200/year for SE
 </p>
 <div class="half second">
   <span class="graph-title">debt among students</span>
   <div id="new-debt"></div>
 </div>
+<p class="full">
+  Engineering at Waterloo is also a more costly program.
+  <br/>
+  The average undergraduate tuition for Canadian citizens studying in Canada is around $6,500/year compared to $17,100/year for SE.
+  The average undergraduate tuition for international students studying in Canada is around $29,700/year compared to $61,200/year for SE
+</p>
 <!-- Resources: 
   https://www150.statcan.gc.ca/n1/pub/75-006-x/2020001/article/00005-eng.htm
   https://www.topuniversities.com/student-info/student-finance/how-much-does-it-cost-study-canada
   https://uwaterloo.ca/future-students/financing/tuition
 -->
 
-<div class="vbx2"></div>
-
 <!-- TODO: Consider removing these sections -->
 <!--
+  <div class="vbx2"></div>
 <h3> Preferred Shopping Method </h3>
 <p class="half">
   <span class="big">
