--- a/content/relationships.html
+++ b/content/relationships.html
@@ -41,7 +41,7 @@
   would explain why 63 % of respondents spent on average less than a day with
   their parents in person.
 </p>
-<div class="vb"></div>
+<div class="vbx2"></div>
 
 <h2>Friendships</h2>
 <div class="long_version">
@@ -68,7 +68,9 @@
     <b> Interactive: </b> Click on a provided filter to hide or display the plot for that filter.
   </p>
 </div>
+<div class="vb"></div>
 </div>
+
 <p class="full">
   <span class="big">
     From classmates to friends..?
@@ -161,6 +163,7 @@
   never had one during university. Someone even boasted having 9 sexual partners
   during their undergraduate studies.
 </p>
+<div class="vb"></div>
 
 <div class="long_version">
 <p class="full">
@@ -184,7 +187,9 @@
   </span>
   <div id="romance-cheating-reasons"></div>
 </div>
+<div class="vb"></div>
 </div>
+
 <h3> Growth </h3>
 <p class="full">
   <span class="big">
