--- a/content/transfers.html
+++ b/content/transfers.html
@@ -35,13 +35,14 @@ an Excellent academic standing.
 </span>
 The Engineering program has a relatively rigid course schedule which offers students the flexibility to choose courses usually only in their fourth year. 
 The Computer Science program, on the other hand, is less restrictive and allows students to customize their schedules freely. 
-<br /> <br />
-Other reasons for transferring included avoiding a course, graduating early, and accommodating for an exchange term. 
 </p>
 <div class="half second">
     <span class="graph-title">reasons for transferring</span>
     <div id="reasons-transferred"></div>
 </div>
+<p class="full">
+    Other reasons for transferring included avoiding a course, graduating early, and accommodating an exchange term.
+</p>
 <div class="vbx2"></div>
 
 <h3> Disliked Courses </h3>
