Update index.html with GA4

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ layout: main
         {% include_relative content/end.html %}
     </div>
 </section>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-47938100-11"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X9PHRWTH9Y"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-47938100-11');
+  gtag('config', 'G-X9PHRWTH9Y');
 </script>
